# inv

./: .gitignore  .isort.cfg  Makefile  README.md  mypy.ini  pyproject.toml  shell.nix
example/: README.md  config.py  data.yml
example/ABC-AAZ-5Z2_location_southampton/: data.yml
example/ABC-AAZ-5Z2_location_southampton/ABC-AAE-7DQ_location_broom_cupboard/: ABC-AAP-L4D_yoga_510_14ast_laptop.yml  data.yml
example/ABC-AAZ-5Z2_southampton/: data.yml
example/ABC-AAZ-5Z2_southampton/ABC-AAE-7DQ_broom_cupboard/: ABC-AA5-E7Y_rub_18l.yml  data.yml
example/ABC-AAZ-5Z2_southampton/ABC-AAE-7DQ_broom_cupboard/ABC-AAC-2PJ_laptops/: ABC-AA3-WYB_laptop.yml  ABC-AAP-L4D_laptop.yml  data.yml
example/ABC-AAZ-5Z2_southampton/ABC-AAE-7DQ_broom_cupboard/ABC-AAC-2PJ_rub_18l/: ABC-AA3-WYB_yoga_510_14ast.yml  ABC-AAP-L4D_yoga_510_14ast.yml
example/meta/: location.yml
example/meta/lenovo/: data.yml  yoga-510-14ast.yml  yoga_510_14ast.yml
example/meta/rub/: data.yml  rub_18l.yml
inv/: __init__.py  asset.py  asset_manufacturer.py  asset_model.py  asset_tree.py  fields.py  inventory.py
inv/asset_code/: __init__.py  abstract.py  damm32.py
inv/cli/: __init__.py  custom_types.py  env.py  validate.py
inv/cli/asset/: __init__.py  add.py  edit.py  list.py  list_assets.py  move.py  show.py
inv/cli/manufacturer/: __init__.py  create.py  list.py
inv/cli/model/: __init__.py  create.py  list.py
inv/types/: __init__.py  asset_code.py  location.py
tests/: __init__.py  test_inv.py
tests/asset_code/: __init__.py  test_damm32.py
(+1 files in other folders)
