[tool.poetry]
name = "inv"
version = "0.1.0"
description = "PyInv - A modular python inventory and asset management system"
authors = ["Dan Trickey <dan@trickey.io>"]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^0.32.2"
damm32 = "^1.1"
click = "^7.0"
pyyaml = "^5.1"
cached-property = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-commas = "^2.0"
flake8-comprehensions = "^2.1"
flake8-debugger = "^3.1"
flake8-docstrings = "^1.3"
flake8-isort = "^2.7"
flake8-mutable = "^1.2"
flake8-todo = "^0.7.0"
mypy = "^0.700"
pytest = "^4.4"
pytest-cov = "^2.6"
rope = "^0.14.0"
isort = {version = "^4.3",extras = ["pyproject"]}

[tool.poetry.scripts]
inv = "inv.cli:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
